--- a/docker-compose-couch.yaml
+++ b/docker-compose-couch.yaml
@@ -14,7 +14,7 @@ services:
     ports:
       - "5984:5984"
 
-  peer0.org1.example.com:
+  peer0.org1.mojix.com:
     environment:
       - CORE_LEDGER_STATE_STATEDATABASE=CouchDB
       - CORE_LEDGER_STATE_COUCHDBCONFIG_COUCHDBADDRESS=couchdb0:5984
@@ -25,11 +25,11 @@ services:
     container_name: couchdb1
     image: hyperledger/fabric-couchdb
     # Comment/Uncomment the port mapping if you want to hide/expose the CouchDB service,
-    # for example map it to utilize Fauxton User Interface in dev environments.
+    # for mojix map it to utilize Fauxton User Interface in dev environments.
     ports:
       - "6984:5984"
 
-  peer1.org1.example.com:
+  peer1.org1.mojix.com:
     environment:
       - CORE_LEDGER_STATE_STATEDATABASE=CouchDB
       - CORE_LEDGER_STATE_COUCHDBCONFIG_COUCHDBADDRESS=couchdb1:5984
@@ -40,11 +40,11 @@ services:
     container_name: couchdb2
     image: hyperledger/fabric-couchdb
     # Comment/Uncomment the port mapping if you want to hide/expose the CouchDB service,
-    # for example map it to utilize Fauxton User Interface in dev environments.
+    # for mojix map it to utilize Fauxton User Interface in dev environments.
     ports:
       - "7984:5984"
 
-  peer0.org2.example.com:
+  peer0.org2.mojix.com:
     environment:
       - CORE_LEDGER_STATE_STATEDATABASE=CouchDB
       - CORE_LEDGER_STATE_COUCHDBCONFIG_COUCHDBADDRESS=couchdb2:5984
@@ -55,11 +55,11 @@ services:
     container_name: couchdb3
     image: hyperledger/fabric-couchdb
     # Comment/Uncomment the port mapping if you want to hide/expose the CouchDB service,
-    # for example map it to utilize Fauxton User Interface in dev environments.
+    # for mojix map it to utilize Fauxton User Interface in dev environments.
     ports:
       - "8984:5984"
 
-  peer1.org2.example.com:
+  peer1.org2.mojix.com:
     environment:
       - CORE_LEDGER_STATE_STATEDATABASE=CouchDB
       - CORE_LEDGER_STATE_COUCHDBCONFIG_COUCHDBADDRESS=couchdb3:5984
