--- a/docker-compose-e2e-template.yaml
+++ b/docker-compose-e2e-template.yaml
@@ -1,11 +1,39 @@
-# Copyright IBM Corp. All Rights Reserved.
-#
-# SPDX-License-Identifier: Apache-2.0
-#
-
 version: '2'
 
 services:
+  couchdb0:
+    container_name: couchdb0
+    image: hyperledger/fabric-couchdb
+    # Comment/Uncomment the port mapping if you want to hide/expose the CouchDB service,
+    # for example map it to utilize Fauxton User Interface in dev environments.
+    ports:
+      - "5984:5984"
+
+  couchdb1:
+    container_name: couchdb1
+    image: hyperledger/fabric-couchdb
+    # Comment/Uncomment the port mapping if you want to hide/expose the CouchDB service,
+    # for mojix map it to utilize Fauxton User Interface in dev environments.
+    ports:
+      - "6984:5984"
+
+  couchdb2:
+    container_name: couchdb2
+    image: hyperledger/fabric-couchdb
+    # Comment/Uncomment the port mapping if you want to hide/expose the CouchDB service,
+    # for mojix map it to utilize Fauxton User Interface in dev environments.
+    ports:
+      - "7984:5984"
+
+  couchdb3:
+    container_name: couchdb3
+    image: hyperledger/fabric-couchdb
+    # Comment/Uncomment the port mapping if you want to hide/expose the CouchDB service,
+    # for mojix map it to utilize Fauxton User Interface in dev environments.
+    ports:
+      - "8984:5984"
+
+
   ccenv:
     image: hyperledger/fabric-ccenv
     container_name: ccenv
@@ -57,21 +85,41 @@ services:
     extends:
       file:  base/docker-compose-base.yaml
       service: peer0.org1.mojix.com
+    environment:
+      - CORE_LEDGER_STATE_STATEDATABASE=CouchDB
+      - CORE_LEDGER_STATE_COUCHDBCONFIG_COUCHDBADDRESS=couchdb0:5984
+    depends_on:
+      - couchdb0
 
-  peer1.org1.moxji.com:
+  peer1.org1.mojix.com:
     container_name: peer1.org1.mojix.com
     extends:
       file:  base/docker-compose-base.yaml
       service: peer1.org1.mojix.com
+    environment:
+      - CORE_LEDGER_STATE_STATEDATABASE=CouchDB
+      - CORE_LEDGER_STATE_COUCHDBCONFIG_COUCHDBADDRESS=couchdb1:5984
+    depends_on:
+      - couchdb1
 
   peer0.org2.mojix.com:
     container_name: peer0.org2.mojix.com
     extends:
       file:  base/docker-compose-base.yaml
       service: peer0.org2.mojix.com
+    environment:
+      - CORE_LEDGER_STATE_STATEDATABASE=CouchDB
+      - CORE_LEDGER_STATE_COUCHDBCONFIG_COUCHDBADDRESS=couchdb2:5984
+    depends_on:
+      - couchdb2
 
   peer1.org2.mojix.com:
     container_name: peer1.org2.mojix.com
     extends:
       file:  base/docker-compose-base.yaml
       service: peer1.org2.mojix.com
+    environment:
+        - CORE_LEDGER_STATE_STATEDATABASE=CouchDB
+        - CORE_LEDGER_STATE_COUCHDBCONFIG_COUCHDBADDRESS=couchdb3:5984
+    depends_on:
+        - couchdb3
